fix spacing and colors and add css

--- a/lowell-dashboard/app/static/css/navbar.css
+++ b/lowell-dashboard/app/static/css/navbar.css
@@ -11,7 +11,6 @@
   font-size: 1.4em;
 }
 .brand a, .brand a:visited {
-  color: #fff;
   text-decoration: none;
 }
 .nav-container {
